使用 Colab 创建而成

--- a/Module 02/Activity_1_Personalised_Greeting_&_User_Preferences.ipynb
+++ b/Module 02/Activity_1_Personalised_Greeting_&_User_Preferences.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/michael-borck/ISYS2001/blob/main/Module%2002/Activity_1_Personalised_Greeting_%26_User_Preferences.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/EJ-Syj/ISYS2001/blob/main/Module%2002/Activity_1_Personalised_Greeting_%26_User_Preferences.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -88,14 +88,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "vscode": {
           "languageId": "python"
         },
-        "id": "HUQtFjQQUTXq"
+        "id": "HUQtFjQQUTXq",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "outputId": "4f9d073b-8ddc-4607-b144-fd3f5987803f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What is your name? Shi\n",
+            "What is your favourite colour? Blue\n",
+            "What is your favourite food? Noodel\n",
+            "Shi: Shi\n",
+            "Blue: Blue\n",
+            "Noodel: Noodel\n"
+          ]
+        }
+      ],
       "source": [
         "# Collect basic user inputs\n",
         "user_name = input(\"What is your name? \")\n",
@@ -103,9 +121,9 @@
         "fav_food = input(\"What is your favourite food? \")\n",
         "\n",
         "# Display the captured inputs\n",
-        "print(\"Name:\", user_name)\n",
-        "print(\"Favourite Colour:\", fav_colour)\n",
-        "print(\"Favourite Food:\", fav_food)"
+        "print(\"Shi:\", user_name)\n",
+        "print(\"Blue:\", fav_colour)\n",
+        "print(\"Noodel:\", fav_food)"
       ]
     },
     {
@@ -138,18 +156,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "vscode": {
           "languageId": "python"
         },
-        "id": "KchT32mbUTXs"
+        "id": "KchT32mbUTXs",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "outputId": "b27994b4-cdad-4db2-84f6-8f76fa52d5fa"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, Shi! Your favourite colour is Blue and you love Noodel.\n"
+          ]
+        }
+      ],
       "source": [
         "# Output a summary message combining the inputs\n",
         "print(\"Hello, \" + user_name + \"! Your favourite colour is \" + fav_colour +\n",
         "      \" and you love \" + fav_food + \".\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hello, \" + user_name + \"! Your favourite colour is \" + fav_colour +\n",
+        "      \" and you love \" + fav_food + \".\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "id": "j6R6oDprCIhd",
+        "outputId": "09b8976c-23d9-4e3e-fd0c-c37e792f8e5d"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, Shi! Your favourite colour is Blue and you love Noodel.\n"
+          ]
+        }
       ]
     },
     {
@@ -180,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -197,6 +253,32 @@
         "# For example:\n",
         "# print(\"Hello, \" + user_name + \"! Your favourite colour is \" + fav_colour +\n",
         "#       \", you love \" + fav_food + \", and your favourite hobby is \" + fav_hobby + \".\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fav_hobby = input(\"How long have you been a student? \")\n",
+        "print(\"Hello, \" + user_name + \"! Your favourite colour is \" + fav_colour +\n",
+        "     \", you love \" + fav_food + \", and your favourite hobby is \" + fav_hobby + \".\")"
+      ],
+      "metadata": {
+        "id": "S1psmSKIJasL",
+        "outputId": "f930b544-cccd-4d56-970f-46f7556e3a60",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How long have you been a student? 18 years\n",
+            "Hello, Shi! Your favourite colour is Blue, you love Noodel, and your favourite hobby is 18 years.\n"
+          ]
+        }
       ]
     },
     {
@@ -463,6 +545,24 @@
         "\n",
         "Happy coding!"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2b10b809"
+      },
+      "source": [
+        "# Collect basic user inputs\n",
+        "user_name = input(\"What is your name? \")\n",
+        "fav_colour = input(\"What is your favourite colour? \")\n",
+        "fav_food = input(\"What is your favourite food? \")\n",
+        "\n",
+        "# Output a summary message combining the inputs\n",
+        "print(\"Hello, \" + user_name + \"! Your favourite colour is \" + fav_colour +\n",
+        "      \" and you love \" + fav_food + \".\")"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
