使用 Colab 创建而成

--- a/Module 02/Activity_1_Personalised_Greeting_&_User_Preferences.ipynb
+++ b/Module 02/Activity_1_Personalised_Greeting_&_User_Preferences.ipynb
@@ -88,29 +88,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 4,
       "metadata": {
         "vscode": {
           "languageId": "python"
         },
         "id": "HUQtFjQQUTXq",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4f9d073b-8ddc-4607-b144-fd3f5987803f"
+        "outputId": "c4a8db85-8b70-4c69-a406-d63dd630e54b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "What is your name? Shi\n",
-            "What is your favourite colour? Blue\n",
-            "What is your favourite food? Noodel\n",
-            "Shi: Shi\n",
-            "Blue: Blue\n",
-            "Noodel: Noodel\n"
+            "What is your name? Ej\n",
+            "What is your favourite colour? blue\n",
+            "What is your favourite food? noodel\n",
+            "Name: Ej\n",
+            "Favourite Colour: blue\n",
+            "Favourite Food: noodel\n"
           ]
         }
       ],
@@ -121,9 +120,9 @@
         "fav_food = input(\"What is your favourite food? \")\n",
         "\n",
         "# Display the captured inputs\n",
-        "print(\"Shi:\", user_name)\n",
-        "print(\"Blue:\", fav_colour)\n",
-        "print(\"Noodel:\", fav_food)"
+        "print(\"Name:\", user_name)\n",
+        "print(\"Favourite Colour:\", fav_colour)\n",
+        "print(\"Favourite Food:\", fav_food)"
       ]
     },
     {
@@ -156,24 +155,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 5,
       "metadata": {
         "vscode": {
           "languageId": "python"
         },
         "id": "KchT32mbUTXs",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b27994b4-cdad-4db2-84f6-8f76fa52d5fa"
+        "outputId": "dafd5c7c-f36b-44ae-b2af-f2a2315d0361"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello, Shi! Your favourite colour is Blue and you love Noodel.\n"
+            "Hello, Ej! Your favourite colour is blue and you love noodel.\n"
           ]
         }
       ],
@@ -181,31 +179,6 @@
         "# Output a summary message combining the inputs\n",
         "print(\"Hello, \" + user_name + \"! Your favourite colour is \" + fav_colour +\n",
         "      \" and you love \" + fav_food + \".\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"Hello, \" + user_name + \"! Your favourite colour is \" + fav_colour +\n",
-        "      \" and you love \" + fav_food + \".\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
-        },
-        "id": "j6R6oDprCIhd",
-        "outputId": "09b8976c-23d9-4e3e-fd0c-c37e792f8e5d"
-      },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello, Shi! Your favourite colour is Blue and you love Noodel.\n"
-          ]
-        }
       ]
     },
     {
@@ -236,7 +209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 14,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -258,25 +231,25 @@
     {
       "cell_type": "code",
       "source": [
-        "fav_hobby = input(\"How long have you been a student? \")\n",
+        "fav_car = input(\"what is your favoourite car?\")\n",
         "print(\"Hello, \" + user_name + \"! Your favourite colour is \" + fav_colour +\n",
-        "     \", you love \" + fav_food + \", and your favourite hobby is \" + fav_hobby + \".\")"
+        "\", you love \" + fav_food + \", and your favourite car is \" + fav_car  + \".\")"
       ],
       "metadata": {
-        "id": "S1psmSKIJasL",
-        "outputId": "f930b544-cccd-4d56-970f-46f7556e3a60",
+        "id": "LVH8n2766WpJ",
+        "outputId": "9d5c001d-2e08-49c8-9d07-d89f6a05411e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "How long have you been a student? 18 years\n",
-            "Hello, Shi! Your favourite colour is Blue, you love Noodel, and your favourite hobby is 18 years.\n"
+            "what is your favoourite car?BMW\n",
+            "Hello, Ej! Your favourite colour is blue, you love noodel, and your favourite car is BMW.\n"
           ]
         }
       ]
@@ -305,14 +278,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "vscode": {
           "languageId": "python"
         },
-        "id": "fHhF5gg8UTXt"
+        "id": "fHhF5gg8UTXt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c60758a2-38d4-4479-f1b3-a2ac50e2f81f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What's your spirit animal? cat\n",
+            "Interesting choice! I wonder why a cat resonates with you.\n"
+          ]
+        }
+      ],
       "source": [
         "spirit_animal = input(\"What's your spirit animal? \")\n",
         "print(\"Interesting choice! I wonder why a\", spirit_animal, \"resonates with you.\")"
@@ -342,14 +328,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "vscode": {
           "languageId": "python"
         },
-        "id": "vKJMOVwwUTXt"
+        "id": "vKJMOVwwUTXt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f2e881ca-de5a-4675-e235-77c2972246d5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Your name in all caps is EJ!\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"Your name in all caps is\", user_name.upper() + \"!\")"
       ]
@@ -402,7 +400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -415,6 +413,32 @@
         "# For example, consider:\n",
         "# print(\"Hello, \" + user_name + \"!\\nYour favourite colour is \" + fav_colour +\n",
         "#       \" and you love \" + fav_food + \".\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Use \\n to create line breaks\n",
+        "print(\"Hello!\\nI love programming!\\nHave a great day!\")\n"
+      ],
+      "metadata": {
+        "id": "yDg-UKsd-RiN",
+        "outputId": "e4b53a1a-a7bc-4f7a-8a61-67889bba5fe8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello!\n",
+            "I love programming!\n",
+            "Have a great day!\n"
+          ]
+        }
       ]
     },
     {
@@ -441,7 +465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -457,6 +481,36 @@
         "# current_year = datetime.datetime.now().year\n",
         "# age = current_year - birth_year\n",
         "# print(\"You are\", age, \"years old!\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Ask the user for their birth year and calculate their age\n",
+        "import datetime\n",
+        "\n",
+        "birth_year = int(input(\"Please enter your birth year: \"))\n",
+        "current_year = datetime.datetime.now().year\n",
+        "age = current_year - birth_year\n",
+        "print(\"You are {} years old!\".format(age))\n"
+      ],
+      "metadata": {
+        "id": "qK1dtzKy-la3",
+        "outputId": "c947ed06-0ca6-47f2-9e32-a8d29a966546",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter your birth year: 2003\n",
+            "You are 22 years old!\n"
+          ]
+        }
       ]
     },
     {
@@ -545,24 +599,6 @@
         "\n",
         "Happy coding!"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2b10b809"
-      },
-      "source": [
-        "# Collect basic user inputs\n",
-        "user_name = input(\"What is your name? \")\n",
-        "fav_colour = input(\"What is your favourite colour? \")\n",
-        "fav_food = input(\"What is your favourite food? \")\n",
-        "\n",
-        "# Output a summary message combining the inputs\n",
-        "print(\"Hello, \" + user_name + \"! Your favourite colour is \" + fav_colour +\n",
-        "      \" and you love \" + fav_food + \".\")"
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
