使用 Colab 创建而成

--- a/Module 02/Activity_2_Ad_Hoc_User_Preferences_Survey.ipynb
+++ b/Module 02/Activity_2_Ad_Hoc_User_Preferences_Survey.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/michael-borck/ISYS2001/blob/main/Module%2002/Activity_2_Ad_Hoc_User_Preferences_Survey.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/EJ-Syj/ISYS2001/blob/main/Module%2002/Activity_2_Ad_Hoc_User_Preferences_Survey.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -57,7 +57,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_b5l7rZlYgCA"
+        "id": "_b5l7rZlYgCA",
+        "outputId": "e2760782-7617-47d1-a82d-a2e88e8c67f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Sample survey programme\n",
@@ -73,8 +77,22 @@
         "print(\"Your favourite colour is \" + favourite_colour + \", you love \" + favourite_food +\n",
         "      \", and your favourite movie is \" + favourite_movie + \".\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What's your name? EJ\n",
+            "What's your favourite colour? Blue\n",
+            "What's your favourite food? Noodle\n",
+            "What's your favourite movie? F\n",
+            "\n",
+            "Hello, EJ!\n",
+            "Your favourite colour is Blue, you love Noodle, and your favourite movie is F.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -120,8 +138,35 @@
         "#       \", your favourite movie is \" + favourite_movie +\n",
         "#       \", and you enjoy \" + favourite_hobby + \".\")"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "favourite_hobby = input(\"What's your favourite hobby?\")\n",
+        "print(\"Hello, \" + name + \"!\")\n",
+        "print(\"Your favourite colour is \" + favourite_colour + \", you love \" + favourite_food +\", your favourite movie is \" + favourite_movie + \", and you enjoy \" + favourite_hobby + \".\")"
+      ],
+      "metadata": {
+        "id": "B1LTJXK0_q0Z",
+        "outputId": "2373819c-58ac-4568-bad7-f6dd36234378",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What's your favourite hobby?ride\n",
+            "Hello, EJ!\n",
+            "Your favourite colour is Blue, you love Noodle, your favourite movie is F, and you enjoy ride.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -172,6 +217,20 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "user_name = \"EJ\"\n",
+        "fav_colour = \"Blue\"\n",
+        "fav_food = \"Noodle\"\n",
+        "fav_movie = \"F1\""
+      ],
+      "metadata": {
+        "id": "nlte2w0JBwKn"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "E2UHoZJqYgCC"
@@ -200,7 +259,22 @@
         "# age = current_year - birth_year\n",
         "# print(\"You are\", age, \"years old!\")"
       ],
-      "execution_count": null,
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# birth_year = int(input(\"What year were you born? \"))\n",
+        "# import datetime\n",
+        "# current_year = datetime.datetime.now().year\n",
+        "# age = current_year - birth_year\n",
+        "# print(\"You are\", age, \"years old!\")"
+      ],
+      "metadata": {
+        "id": "i1S0qXziBlwE"
+      },
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -228,6 +302,29 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Hello, {user_name}! Your favourite colour is {fav_colour}, you love {fav_food}, and your favourite movie is {fav_movie}.\")"
+      ],
+      "metadata": {
+        "id": "mA_eyX1NCiAh",
+        "outputId": "d4fecba7-8e28-4f75-fa14-ce9bb7aea0b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, EJ! Your favourite colour is Blue, you love Noodel, and your favourite movie is F.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
