使用 Colab 创建而成

--- a/Module 02/Activity_3_User_Preferences_with_Simplified_Methodology.ipynb
+++ b/Module 02/Activity_3_User_Preferences_with_Simplified_Methodology.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/michael-borck/ISYS2001/blob/main/Module%2002/Activity_3_User_Preferences_with_Simplified_Methodology.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/EJ-Syj/ISYS2001/blob/main/Module%2002/Activity_3_User_Preferences_with_Simplified_Methodology.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -144,7 +144,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2s24hvYsaav7"
+        "id": "2s24hvYsaav7",
+        "outputId": "58e6d224-6a11-4885-fd92-ef80434c8876",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Step 5: Final Implementation of User Preferences program\n",
@@ -161,8 +165,22 @@
         "      \", you love \" + favourite_food +\n",
         "      \", and you enjoy \" + favourite_hobby + \".\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What is your name? Ej\n",
+            "What's your favourite colour? Blue\n",
+            "What's your favourite food? Noodle\n",
+            "What's your favourite hobby? Ride\n",
+            "\n",
+            "Hello, Ej!\n",
+            "Your favourite colour is Blue, you love Noodle, and you enjoy Ride.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -189,7 +207,11 @@
       "cell_type": "code",
       "metadata": {
         "md-indent": "   ",
-        "id": "4M66AJuraav8"
+        "id": "4M66AJuraav8",
+        "outputId": "4838fe3d-9b6b-4e03-c9e3-e97e5a9df502",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print(\"* Name:\", name)\n",
@@ -197,8 +219,48 @@
         "print(\"* Favourite Food:\", favourite_food)\n",
         "print(\"* Favourite Hobby:\", favourite_hobby)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "* Name: Ej\n",
+            "* Favourite Colour: Blue\n",
+            "* Favourite Food: Noodle\n",
+            "* Favourite Hobby: Ride\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"*name:\", name)\n",
+        "print(\"* Favourite Colour:\", favourite_colour)\n",
+        "print(\"* favourite food：\",favourite_food)\n",
+        "print(\"* favourite Hobby:\", favourite_hobby)"
+      ],
+      "metadata": {
+        "id": "6d8NaxU-DmDM",
+        "outputId": "cc010b94-f731-49de-cd7b-ae5096597f34",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*name: Ej\n",
+            "* Favourite Colour: Blue\n",
+            "* favourite food： Noodle\n",
+            "* favourite Hobby: Ride\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -217,7 +279,11 @@
       "cell_type": "code",
       "metadata": {
         "md-indent": "   ",
-        "id": "V56phTDlaav8"
+        "id": "V56phTDlaav8",
+        "outputId": "e0382d84-459f-408f-f86c-9e376c9591ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "import datetime\n",
@@ -226,8 +292,45 @@
         "age = current_year - birth_year\n",
         "print(\"You are\", age, \"years old!\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What year were you born? 2003\n",
+            "You are 22 years old!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import datetime\n",
+        "birth_year = int(input(\"What year were you born?\"))\n",
+        "current_year = datetime.datetime.now().year\n",
+        "age = current_year - birth_year\n",
+        "print(\"You are\", age,\"years old!\")"
+      ],
+      "metadata": {
+        "id": "SqSPM3pDEhyI",
+        "outputId": "353ebb4a-c0b2-4264-f734-d3dbbafd17b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What year were you born?20000003\n",
+            "You are -19997978 years old!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -251,6 +354,29 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Hello,{name}! Your favourite colour is{favourite_colour},you love{favourite_food}, and you enjoy{favourite_hobby}\")"
+      ],
+      "metadata": {
+        "id": "4i0le0srFTPn",
+        "outputId": "00327474-fcbd-4052-fc76-6a2077dc8dde",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello,Ej! Your favourite colour isBlue,you loveNoodle, and you enjoyRide\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
