使用 Colab 创建而成

--- a/Module 02/Mini_Project_02_Finance_Tracker_Profile_Setup.ipynb
+++ b/Module 02/Mini_Project_02_Finance_Tracker_Profile_Setup.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/michael-borck/ISYS2001/blob/main/Module%2002/Mini_Project_02_Finance_Tracker_Profile_Setup.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/EJ-Syj/ISYS2001/blob/main/Module%2002/Mini_Project_02_Finance_Tracker_Profile_Setup.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -205,7 +205,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "new-evidence-code-cell"
+        "id": "new-evidence-code-cell",
+        "outputId": "eca0bd7f-2d3e-4b92-e8eb-95c10cb09308",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        }
       },
       "source": [
         "# Complete this dictionary with your reflections.\n",
@@ -231,8 +236,89 @@
         "        print(f'{key.replace(\"_\", \" \").title()}: {value}')\n",
         "print(\"=\"*50)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'datetime' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3663048752.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Complete this dictionary with your reflections.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m evidence_package = {\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;34m\"timestamp\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%Y-%m-%d %H:%M:%S'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;34m\"student_name\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"[Your Name Here]\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;34m\"project_context\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"This project involved creating the initial user profile for a personal finance tracker, focusing on applying a structured problem-solving methodology.\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'datetime' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from datetime import datetime\n",
+        "\n",
+        "evidence_package = {\n",
+        "    \"timestamp\": datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\"),\n",
+        "    \"student_name\": \"Yi Jie Shi\",\n",
+        "\n",
+        "    \"project_content\": \"This project involved creating the initial user profile for a personal finance tracker, focusing on applying a structured problem-solving methodology.\",\n",
+        "\n",
+        "    \"ai_tool_used\": \"ChatGPT\",\n",
+        "\n",
+        "    \"ai_assistance_summary\": \"I used AI to clarify the logic of my pseudocode and improve my variable naming. It also helped me phrase the final summary message more clearly and professionally.\",\n",
+        "\n",
+        "    \"best_practice_reflection\": \"I followed the best practice of using descriptive and meaningful variable names like 'primary_currency' and 'main_savings_goal', which made my code more readable and self-documenting.\",\n",
+        "\n",
+        "    \"best_learning\": \"I learned the importance of gathering user input in a structured way and constructing output messages dynamically using string concatenation and formatting.\"\n",
+        "}\n",
+        "\n",
+        "# Optional: display the result in a formatted way\n",
+        "print(\"=\"*50)\n",
+        "print(\"EVIDENCE PACKAGE SUBMISSION\")\n",
+        "print(\"=\"*50)\n",
+        "\n",
+        "for key, value in evidence_package.items():\n",
+        "    if isinstance(value, str) and len(value) > 60:\n",
+        "        print(f\"\\n{key.replace('_', ' ').title()}:\\n{value}\")\n",
+        "    else:\n",
+        "        print(f\"{key.replace('_', ' ').title()}: {value}\")\n",
+        "\n",
+        "print(\"=\"*50)"
+      ],
+      "metadata": {
+        "id": "jkuWhON8G4FP",
+        "outputId": "c5dcaaad-8294-47c4-88e3-8dd16a0b4fde",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==================================================\n",
+            "EVIDENCE PACKAGE SUBMISSION\n",
+            "==================================================\n",
+            "Timestamp: 2025-08-04 12:44:57\n",
+            "Student Name: Yi Jie Shi\n",
+            "\n",
+            "Project Content:\n",
+            "This project involved creating the initial user profile for a personal finance tracker, focusing on applying a structured problem-solving methodology.\n",
+            "Ai Tool Used: ChatGPT\n",
+            "\n",
+            "Ai Assistance Summary:\n",
+            "I used AI to clarify the logic of my pseudocode and improve my variable naming. It also helped me phrase the final summary message more clearly and professionally.\n",
+            "\n",
+            "Best Practice Reflection:\n",
+            "I followed the best practice of using descriptive and meaningful variable names like 'primary_currency' and 'main_savings_goal', which made my code more readable and self-documenting.\n",
+            "\n",
+            "Best Learning:\n",
+            "I learned the importance of gathering user input in a structured way and constructing output messages dynamically using string concatenation and formatting.\n",
+            "==================================================\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
