使用 Colab 创建而成

--- a/Module 01/01_Hello_Python!_Your_First_Steps_in_Coding.ipynb
+++ b/Module 01/01_Hello_Python!_Your_First_Steps_in_Coding.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/michael-borck/ISYS2001/blob/main/Module%2001/01_Hello_Python!_Your_First_Steps_in_Coding.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/EJ-Syj/ISYS2001/blob/main/Module%2001/01_Hello_Python!_Your_First_Steps_in_Coding.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -45,7 +45,7 @@
       },
       "outputs": [],
       "source": [
-        "print(\"  \")"
+        "print(\" Hello World \")"
       ]
     },
     {
@@ -76,7 +76,7 @@
       },
       "outputs": [],
       "source": [
-        "print(\"  \")"
+        "print(\" EEEEJJJJ \")"
       ]
     },
     {
@@ -125,17 +125,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "vscode": {
           "languageId": "python"
         },
-        "id": "wseyy3ZlNgCu"
+        "id": "wseyy3ZlNgCu",
+        "outputId": "ee07ddf5-ebc2-4834-d66f-d5d9cd5cf246",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python is versatile \n",
+            "I am learning Python \n"
+          ]
+        }
+      ],
       "source": [
-        "print(\" \")\n",
-        "print(\" \")"
+        "print(\"Python is versatile \")\n",
+        "print(\"I am learning Python \")"
       ]
     },
     {
